datacenter/per-user/label-studio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: label-studio
spec:
  ports:
    - port: 8080
  selector:
    component: label-studio
  clusterIP: None
